@@ -297,6 +297,7 @@ function applyTimespanFilterChange(objForm) {
 function applyGraphPreviewFilterChange(objForm) {
 	strURL = '?action=preview';
 	strURL = strURL + '&host_id=' + objForm.host_id.value;
+	strURL = strURL + '&rows=' + objForm.rows.value;
 	strURL = strURL + '&graph_template_id=' + objForm.graph_template_id.value;
 	strURL = strURL + '&filter=' + objForm.filter.value;
 	document.location = strURL;
